--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=postgres
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/yankees
+spring.datasource.username=root
 spring.datasource.password=pse10023
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-
-server.error.include-message=always
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
